--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "983674bc-e810-4457-960c-6c54c4e4d412",
+   "metadata": {},
+   "source": [
+    "The aim of this project is to check whether participation in the leaflet campaign has a positive impact on the revenues per square meter of stores operating under one brand. The study was motivated by the need to better understand the effectiveness of marketing activities and their actual impact on the revenues of the analyzed store chain. This is closely related to the concept of incrementality, i.e. measuring how much additional value a given marketing campaign generates compared to what would have occurred without it. The first statistical inference tool was the Mann-Whitney test, which was performed to compare the distribution of revenues per m2 among stores participating and not participating in the leaflet campaign. Another method of causal inference was linear regression. The following sections focused on propensity score techniques to minimize the impact of confounding variables on estimated results. The indicator was estimated using two models: a classic approach based on logistic regression and gradient boosting models (GBM). Additionally, two response models were tested for each estimation method to determine average treatment effects: propensity score matching and inverse propensity score weighting. A 95% confidence interval was determined for each metric using the bootstrap method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8c200110-8839-422f-b3a6-c21ea2ec3ede",
